# statfenics

./: README.md  pyproject.toml  setup.py
statfenics/: covariance.py  utils.py
tests/: test_covariance.py  test_utils.py
