[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statfenics"
version = "0.0.1"
authors = [
  { name="Connor Duffin", email="cpd32@cam.ac.uk" },
]
description = "Tools for statFEM problems with Fenics"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/connor-duffin/statfenics"
"Bug Tracker" = "https://github.com/connor-duffin/statfenics/issues"